# socketapi

./: .clang-format  .gitignore  CMakeLists.txt  flow  p1.py
cmake/: version.h.in
examples/: CMakeLists.txt
examples/udp/: CMakeLists.txt  udpecho.cpp  udpechosvr.cpp
include/sockpp/: acceptor.h  can_frame.h  datagram_socket.h  error.h  inet_address.h  platform.h  result.h  sock_address.h  socket.h  stream_socket.h  udp_socket.h
src/: CMakeLists.txt  acceptor.cpp  datagram_socket.cpp  error.cpp  inet_address.cpp  socket.cpp
tests/unit/: CMakeLists.txt  catch2_version.h  test_acceptor.cpp  unit_tests.cpp
